# vector-index-embedding

./: .gitignore  LICENSE  README.md  pyproject.toml  quickstart.ipynb
benchmark/: Readme.md  alpaca-results.csv  analyze.ipynb  bench_alpacaeval.py  bench_head.py  bench_performance.py  bench_recall.py  run_lm_eval.py  run_perfromance.py
benchmark/config/: alpaca-sweep.yaml  full-debug.yaml  full-sweep.yaml  head-debug.yaml  head-sweep.yaml  recall-wikipedia.yaml
benchmark/result/: full-speedup.csv  head-speedup.csv  recall-result.csv
example/: gpt2.py  qwen.py  run_model.py
src/vectorindex/: __init__.py  flat_index.py  vector_index.py
