[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-index-embedding"
version = "0.1.1"
requires-python = ">=3.9"
authors = [
  { name="Martin Loretz", email="pypi@martinloretz.com" },
]
description = "HNSW based output embeddings for LLM's"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

# hnswlib-fast-ip
dependencies = ["torch", "hnswlib", "huggingface_hub"]
